# SETR_Trab2

./: CMakeLists.txt  README.md  cenas.c  main.c
core/: cmdproc.c
core/include/: cmdproc.h
core/src/: cmdproc.c  unity.c
core/test/: test.c
doc/: Doxyfile  README.md
doc/html/: annotated.html  classes.html  cmdproc_8c.html  cmdproc_8c__incl.dot  cmdproc_8c__incl.map  cmdproc_8c__incl.md5  cmdproc_8h.html  cmdproc_8h__dep__incl.dot  cmdproc_8h__dep__incl.map  cmdproc_8h__dep__incl.md5  cmdproc_8h__incl.dot  cmdproc_8h__incl.map  cmdproc_8h__incl.md5  cmdproc_8h_source.html  dir_000000_000001.html  dir_000002_000001.html  dir_000003_000001.html  dir_24d671cfcbc5d5238a6bd565a49d198f.html  dir_24d671cfcbc5d5238a6bd565a49d198f_dep.map  dir_24d671cfcbc5d5238a6bd565a49d198f_dep.md5  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4270bfced15e0e73154b13468c7c9ad9_dep.dot  dir_4270bfced15e0e73154b13468c7c9ad9_dep.map  dir_4270bfced15e0e73154b13468c7c9ad9_dep.md5  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_90fd98a0ba30abf7a6068a44995d2d6b_dep.map  dir_90fd98a0ba30abf7a6068a44995d2d6b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_eda73d8bf8fbd45703b949ae88d46188.html  dir_eda73d8bf8fbd45703b949ae88d46188_dep.map  dir_eda73d8bf8fbd45703b949ae88d46188_dep.md5  files.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js  pages.html  structRxBuffer-members.html  structRxBuffer.html  (+8 more)
doc/latex/: annotated.tex  cmdproc_8c.tex  cmdproc_8c.tex.tmp  cmdproc_8c__incl.dot  cmdproc_8c__incl.md5  files.tex  (+14 more)
include/: cmdproc.h
test/: teste.c
(+18 files in other folders)
